--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -14,7 +14,7 @@ fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
+menu, nav,output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -50,9 +50,11 @@ table {
 /* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
+    font-weight: bold;
 }
 
 html, body {
+	background:#000;
     height: 100%;
     font-family: 'Titillium Web', sans-serif;
 }
@@ -63,4 +65,96 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+/* Your code starts here! */
+.container {
+	display: flex;
+	flex-flow: row wrap;
+	padding: 2% 5% 5% 5%;
+	margin: 0 10%;
+	background: #fff;
+}
+
+header nav ul li{ display: inline; justify-content: space-between; }
+
+header nav ul li:last-child { margin: 0 0 0 8.5em;
+}
+
+header nav img { vertical-align: top; }
+
+header nav a { text-decoration:none; color:gray; padding: 0 15px;}
+
+.inline-block { display: inline-block;  }
+
+.first-section { width: 100%; justify-content: flex-end;}
+
+.first-section img { vertical-align: bottom; }
+
+.first-section h1{ font-size: 80px; }
+
+.first-div {
+	padding: 0 20px 10px 30px;
+	text-align: center;
+	margin-right:5em;
+	padding-bottom: 40px;
+	box-sizing: border-box;
+}
+.first-div button {
+	padding: 8px 35px;
+	border: 1.5px solid black;
+	background: #fff;
+}
+.second-section { width: 100%;}
+
+.second-div {  width: 48%; display: inline-block; padding-right: 4%;}
+
+.middle-img { margin: auto; width: 100%;}
+
+.third-div { width:32%; padding-right: 3%; display: inline-block;}
+
+.second-div-wrapper { width: 100%; }
+
+.address { width: 100%; }
+
+footer { width: 100%; 
+		 text-align: center; margin-top: 3em; }
+
+.service-first-section { padding-right: 0.5em; }
+.service-first-section img { width: 99%; }
+
+.service-second-section {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+}
+
+.service-second-section div{
+	width: 46%;
+	padding: 1.5em;
+	border: 1.5px solid black;
+	background-color: #f8f8f8;
+}
+
+.service-second-section button {
+	padding: 3%; width: 40%; background:#fff;
+	border-radius:8%; margin-top: 4%;border: solid;
+}
+
+.service-third-section {
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.service-third-section div {
+	width: 46%;
+	padding: 2%;
+}
+.service-third-section img {
+	width: 46%;
+}
+
+.service-third-section li {
+	list-style-type: disc;
+}
+
+.left { margin-right: 4.29em; margin-bottom: 2em;}
+.right { margin-left:; margin-bottom: 2em;}
